fixed color variant-data-entry(dark-mode)

--- a/app/src/main/res/layout/activity_add_payment.xml
+++ b/app/src/main/res/layout/activity_add_payment.xml
@@ -141,6 +141,7 @@
                         android:layout_width="190dp"
                         android:layout_height="match_parent"
                         android:inputType="datetime"
+                        android:textColor="@color/black"
                         android:singleLine="true" />
 
                 </LinearLayout>
@@ -162,6 +163,7 @@
                         android:id="@+id/etPaymentAmountAdd"
                         android:layout_width="190dp"
                         android:inputType="number"
+                        android:textColor="@color/black"
                         android:layout_height="match_parent"
                         android:singleLine="true"/>
 
@@ -185,6 +187,7 @@
                         android:id="@+id/etPaympesacodeAdd"
                         android:layout_width="190dp"
                         android:inputType="text"
+                        android:textColor="@color/black"
                         android:layout_height="match_parent"
                         android:singleLine="true"/>
 
@@ -208,6 +211,7 @@
                         android:id="@+id/etPayBankrefAdd"
                         android:layout_width="190dp"
                         android:inputType="text"
+                        android:textColor="@color/black"
                         android:layout_height="match_parent"
                         android:singleLine="true"/>
 
