--- a/app/src/main/res/layout/activity_jounal_entry.xml
+++ b/app/src/main/res/layout/activity_jounal_entry.xml
@@ -120,6 +120,7 @@
                             android:layout_width="190dp"
                             android:layout_height="match_parent"
                             android:inputType="number"
+                            android:textColor="@color/black"
                             android:background="@android:drawable/editbox_dropdown_light_frame" />
 
 
@@ -143,6 +144,7 @@
                             android:layout_width="190dp"
                             android:layout_height="match_parent"
                             android:inputType="datetime"
+                            android:textColor="@color/black"
                             android:background="@android:drawable/editbox_dropdown_light_frame" />
 
                     </LinearLayout>
