--- a/app/src/main/res/layout/activity_new_invoice.xml
+++ b/app/src/main/res/layout/activity_new_invoice.xml
@@ -120,6 +120,7 @@
                             android:layout_width="190dp"
                             android:layout_height="match_parent"
                             android:singleLine="true"
+                            android:textColor="@color/black"
                             android:inputType="number"
                             android:background="@android:drawable/editbox_dropdown_light_frame" />
 
@@ -144,6 +145,7 @@
                             android:layout_width="190dp"
                             android:layout_height="match_parent"
                             android:singleLine="true"
+                            android:textColor="@color/black"
                             android:inputType="number"
                             android:background="@android:drawable/editbox_dropdown_light_frame" />
 
@@ -167,6 +169,7 @@
                             android:layout_width="190dp"
                             android:layout_height="match_parent"
                             android:singleLine="true"
+                            android:textColor="@color/black"
                             android:inputType="number"
                             android:background="@android:drawable/editbox_dropdown_light_frame" />
 
@@ -190,6 +193,7 @@
                             android:layout_width="190dp"
                             android:layout_height="match_parent"
                             android:inputType="datetime"
+                            android:textColor="@color/black"
                             android:singleLine="true"
                             android:background="@android:drawable/editbox_dropdown_light_frame" />
 
