--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -67,6 +67,7 @@
                         <EditText
                             android:id="@+id/etUser"
                             android:layout_width="235dp"
+                            android:textColor="@color/black"
                             android:layout_height="match_parent"
                             android:inputType="text"
                             android:background="@android:drawable/editbox_dropdown_light_frame" />
@@ -89,6 +90,7 @@
                         <EditText
                             android:id="@+id/etcurrPass"
                             android:layout_width="235dp"
+                            android:textColor="@color/black"
                             android:layout_height="match_parent"
                             android:background="@android:drawable/editbox_dropdown_light_frame"/>
                     </LinearLayout>
@@ -109,6 +111,7 @@
                         <EditText
                             android:id="@+id/etnewPass"
                             android:layout_width="235dp"
+                            android:textColor="@color/black"
                             android:layout_height="match_parent"
                             android:inputType="textPassword"
                             android:background="@android:drawable/editbox_dropdown_light_frame"/>
@@ -131,6 +134,7 @@
                         <EditText
                             android:id="@+id/etconfrmnp"
                             android:layout_width="235dp"
+                            android:textColor="@color/black"
                             android:layout_height="match_parent"
                             android:inputType="textPassword"
                             android:background="@android:drawable/editbox_dropdown_light_frame"/>
